# Roots

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml  roots.db
.github/workflows/: ci.yml
demo/: README.md  run_all.py
demo/_common/: base.html  demo_server.py  event-log.js  graph-renderer.js  roots-client.js  state-viewer.js  styles.css
demo/api-explorer/: agents.py  process.yaml  run_demo.py
demo/api-explorer/static/: index.html
demo/content-pipeline/: agents.py  process.yaml  run_demo.py
demo/content-pipeline/static/: index.html
demo/incident-response/: agents.py  mock_decision.py  process.yaml  run_demo.py
demo/incident-response/static/: index.html
demo/index/static/: index.html
demo/node-explorer/: agents.py  process.yaml  run_demo.py  server_extensions.py  tutorial_content.json
demo/node-explorer/static/: index.html
demo/research-assistant/: agents.py  process.yaml  run_demo.py
demo/research-assistant/static/: index.html
docs/: INTEGRATION_GUIDE.md
examples/: run_simple.py
examples/packaging/: README.md  install_and_run.py  process.yaml  sample-review-1.0.0.root
examples/packaging/defaults/: __init__.py
examples/processes/: parallel-validation.yaml  simple-linear.yaml
kit_tools/: .fix-result.json  AGENT_README.md  AUDIT_FINDINGS.md  BUMP_VERSION.md  EXECUTION_LOG.md  PRODUCT_VISION.md  SEED_MANIFEST.json  SESSION_LOG.md  SESSION_SCRATCH.md  SYNC_MANIFEST.json  SYNOPSIS.md
kit_tools/.sync_cache/: architecture_summary.md
kit_tools/arch/: CODE_ARCH.md  DATA_MODEL.md  DECISIONS.md  INFRA_ARCH.md  SECURITY.md  SERVICE_MAP.md
kit_tools/arch/patterns/: AUTH.md  ERROR_HANDLING.md  LOGGING.md
kit_tools/docs/: API_GUIDE.md  CI_CD.md  CONVENTIONS.md  DEPLOYMENT.md  ENV_REFERENCE.md  GOTCHAS.md  LOCAL_DEV.md  MONITORING.md  TROUBLESHOOTING.md  UI_STYLE_GUIDE.md
kit_tools/docs/feature_guides/: FEATURE_TEMPLATE.md
kit_tools/hooks/: create_scratchpad.py  detect_phase_completion.py  remind_close_session.py  remind_scratchpad_before_compact.py  update_doc_timestamps.py  validate_seeded_template.py  validate_setup.py
kit_tools/roadmap/: BACKLOG.md  MILESTONES.md
kit_tools/specs/: .execution-state.json  EPIC.md  FEATURE_SPEC.md  epic-embedding-enhancements.md  epic-library-refinements.md  epic-process-composition.md  epic-root-packaging.md  epic-roots-v1.md  feature-agent-context.md  feature-agent-registry.md  feature-cli.md  feature-crash-safe-parallel.md  feature-decision-engine.md  feature-decision-history.md  feature-demo-apps.md  feature-event-subscriptions.md  feature-event-system.md  feature-fork-join.md  feature-http-api.md  feature-iterator-node.md  feature-mcp-invocation.md  feature-orchestrator-engine.md  feature-process-schema.md  feature-process-versioning.md  feature-retry-escalation.md  feature-root-defaults.md  feature-root-install.md  feature-root-manifest.md  feature-run-metadata.md  feature-storage-backend.md  feature-subprocess-execution.md  feature-subprocess-schema.md  feature-vote-aggregation.md
kit_tools/specs/archive/: feature-agent-context.md  feature-cli.md  feature-crash-safe-parallel.md  feature-demo-apps.md  feature-event-subscriptions.md  feature-event-system.md  feature-fork-join.md  feature-http-api.md  feature-iterator-node.md  feature-orchestrator-engine.md  feature-retry-escalation.md  feature-root-manifest.md  feature-run-metadata.md  feature-storage-backend.md  feature-subprocess-execution.md
kit_tools/testing/: TESTING_GUIDE.md  test-metrics.json
roots/: __init__.py
roots/agents/: context.py  invoker.py  mcp_gateway.py  registry.py  types.py
roots/api/: app.py  deps.py  models.py
roots/api/routers/: agents.py  checkpoints.py  decisions.py  graph.py  processes.py  runs.py  webhooks.py
roots/cli/: main.py
roots/core/: aggregation.py  checkpoint.py  decision.py  escalation.py  llm.py  orchestrator.py  retry.py  schema.py  state_machine.py  url_validator.py  utils.py  validator.py
roots/events/: emitter.py  sinks.py  subscriptions.py  types.py  webhooks.py
roots/packaging/: __init__.py  archive.py  config.py  defaults.py  extractor.py  inspect.py  installer.py  manifest.py  pack.py  scaffold.py  tracker.py
roots/storage/: base.py  postgres.py  sqlite.py
tests/: conftest.py  test_agent_context.py  test_agent_context_injection.py  test_agent_handlers.py  test_agent_invoker.py  test_agent_registry.py  test_agent_routes.py  test_agent_schema_validation.py  test_agent_types.py  test_aggregation.py  test_api_auth.py  test_app_factory.py  test_archive.py  test_checkpoint_resolution.py  test_checkpoint_routes.py  test_cli.py  test_config.py  test_contracts.py  test_decision.py  test_decision_routes.py  test_defaults.py  test_demo_server.py  test_edge_state.py  test_emitter.py  test_error_key.py  test_escalation.py  test_events.py  test_example_processes.py  test_extractor.py  test_fork_join.py  test_graph_mutations.py  test_graph_routes.py  test_handlers.py  test_http_sink.py  test_inspect.py  test_install.py  test_installer.py  test_iterator_execution.py  test_iterator_parallel.py  test_iterator_validation.py  (+38 more)
